# ankihighlights

./: .env  .env.container  .env.local  .env.test  .gitignore  Dockerfile  README.md  ankiconnect_wrapper.py  ankikindle.py  ankikindle_flask_app.py  ankikindle_flask_routes.py  config.py  docker-compose.yml  env.container  flask_app.py  kindle_clippings_scraper.py  pyproject.toml  pytest.ini  requirements.txt  routes.py  run.py  run_flask_app.py  schema.sql  vocab_database_wrapper.py  vocab_db_accessor_wrap.py
anki_docker_fork/: Dockerfile
api_spec/: ankiconnect.json
app/: __init__.py  anki_constants.py  app.py  injection_dependencies.py  logging_config.py  main.py  util.py
app/controllers/: highlight_controller.py
app/models/: __init__.py  anki_card.py  book_info.py  (+6 more)
app_tests/: conftest.py  env_vars.py  test_anki_routes.py  test_db_sync.py  test_db_sync_container_dependant.py  test_flask.py  test_models.py  test_routes.py  test_service.py  test_vocab_highlights_routes.py
misc/: MVCS.md  initial_concept.md  schema_synch.md
misc_unused_code_study/: schema.sql  test_kindle_clippings_scraper.py
old_src/: ankiconnect_wrapper.py  ankikindle_flask_app.py  vocab_db_accessor_wrap.py
old_tests/: conftest.py  test_ankiconnect_wrapper.py  test_ankikindle.py  test_ankikindle_flask_app.py  test_ugly_integration_sandbox.py  test_util.py  test_vocab_db_wrapper.py
refactoring/: initial_concept.md  schema_synch.txt
resources/: vocab.db
src/: ankikindle.py
test_resources/: vocab.db
tests/: conftest.py  pytest.ini  test_ankiconnect_wrapper.py  test_ankikindle.py  test_ankikindle_flask_app.py  test_ankikindle_routes.py  test_flask_app.py  test_kindle_clippings_scraper.py  test_routes.py  test_ugly_integration_sandbox.py  test_util.py  test_vocab_database_wrapper.py  test_vocab_db_wrapper.py
(+30 files in other folders)
