[tool.poetry]
name = "ankikindle"
version = "0.1.0"
description = "A Flask application to manage vocabularies and interact with Anki"
authors = ["Ian Neville <lanur622@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
SQLAlchemy = "^1.3.19"
Flask-SQLAlchemy = "^2.4.4"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
watchdog = "^3.0.0"
selenium = "^4.9.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
